--- a/_config.yml
+++ b/_config.yml
@@ -10,27 +10,27 @@
 # Review documentation to determine if you should use `theme` or `remote_theme`
 # https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/#installing-the-theme
 
-  theme                  : "minimal-mistakes-jekyll"
+# theme                  : "minimal-mistakes-jekyll"
 # remote_theme           : "mmistakes/minimal-mistakes"
-minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
-locale                   : "en-US"
-title                    : "Site Title"
+locale                   : "vn-VN"
+title                    : "Kinh Tế Học Vô Hại"
 title_separator          : "-"
-subtitle                 : # site tagline that appears below site title in masthead
-name                     : "Your Name"
-description              : "An amazing website."
-url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+subtitle                 : "Harmless Economics"
+name                     : "Harmless Economics"
+description              : "Nơi chia sẻ kiến thức ``Vô Hại'' về kinh tế học, khoa học dữ liệu và phương thức kết hợp chúng trong nghiên cứu các vấn đề chính sách, xã hội và quyết định kinh doanh."
+url                      : "http://kinhtehocvohai.github.io"
+baseurl                  : # "/harmlessecon"
+repository               : "kinhtehocvohai/kinhtehocvohai.github.io"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+logo                     : "/assets/images/logo.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
-# breadcrumbs            : false # true, false (default)
+#breadcrumbs            :  true #false (default)
 words_per_minute         : 200
 comments:
-  provider               : # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "custom"
+  provider               : "facebook" # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "custom"
   disqus:
     shortname            : # https://help.disqus.com/customer/portal/articles/466208-what-s-a-shortname-
   discourse:
@@ -39,7 +39,7 @@ comments:
     # https://developers.facebook.com/docs/plugins/comments
     appid                :
     num_posts            : # 5 (default)
-    colorscheme          : # "light" (default), "dark"
+    colorscheme          : "light" #  (default), "dark", "light"
   utterances:
     theme                : # "github-light" (default), "github-dark"
     issue_term           : # "pathname" (default)
@@ -51,8 +51,8 @@ reCaptcha:
   secret                 :
 atom_feed:
   path                   : # blank (default) uses feed.xml
-search                   : # true, false (default)
-search_full_content      : # true, false (default)
+search                   : true # true, false (default)
+search_full_content      : true # true, false (default)
 search_provider          : # lunr (default), algolia, google
 algolia:
   application_id         : # YOUR_APPLICATION_ID
@@ -74,7 +74,7 @@ twitter:
 facebook:
   username               :
   app_id                 :
-  publisher              :
+  publisher              : "https://www.facebook.com/harmlessecon"
 og_image                 : # Open Graph/Twitter default site image
 # For specifying social profiles
 # - https://developers.google.com/structured-data/customize/social-profiles
@@ -85,39 +85,41 @@ social:
 
 # Analytics
 analytics:
-  provider               : false # false (default), "google", "google-universal", "google-gtag", "custom"
+  provider               : "google-gtag" # false (default), "google", "google-universal", "google-gtag", "custom"
   google:
-    tracking_id          :
+    tracking_id          : "G-3ES8M9WB8V"
     anonymize_ip         : # true, false (default)
 
 
 # Site Author
 author:
-  name             : "Your Name"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
+  name             : "Kinh tế học Vô hại"
+  avatar           : "/assets/images/logo.png"
+  bio              : "Kinh tế học. Khoa học dữ liệu. Vô hại."
+  location         : "Hành tinh xanh, bé, tầm thường giữa Ngân hà"
   email            :
   links:
-    - label: "Email"
-      icon: "fas fa-fw fa-envelope-square"
-      # url: "mailto:your.name@email.com"
-    - label: "Website"
-      icon: "fas fa-fw fa-link"
-      # url: "https://your-website.com"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      # url: "https://twitter.com/"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
-      # url: "https://facebook.com/"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      # url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      # url: "https://instagram.com/"
+      url: "https://www.facebook.com/harmlessecon"
+    - label: "Email"
+      icon: "fas fa-fw fa-envelope-square"
+      url: "mailto:kinhtehocvohai@gmail.com"
+    #- label: "Website"
+      #icon: "fas fa-fw fa-link"
+      #url: "http://kinhtehocvohai.com/"
+    
+    #- label: "Twitter"
+      #icon: "fab fa-fw fa-twitter-square"
+      # url: "https://twitter.com/"
 
+    #- label: "GitHub"
+      #icon: "fab fa-fw fa-github"
+      # url: "https://github.com/"
+    #- label: "Instagram"
+      #icon: "fab fa-fw fa-instagram"
+      # url: "https://instagram.com/"
+      
 # Site Footer
 footer:
   links:
@@ -126,7 +128,7 @@ footer:
       # url:
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
-      # url:
+      url: "https://www.facebook.com/harmlessecon"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       # url:
@@ -207,9 +209,9 @@ sass:
 
 # Outputting
 permalink: /:categories/:title/
-paginate: 5 # amount of posts to show
-paginate_path: /page:num/
-timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+paginate: 3 # amount of posts to show
+paginate_path: "/page:num/"
+timezone: Asia/Ho_Chi_Minh # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 
 # Plugins (previously gems:)
@@ -264,6 +266,22 @@ compress_html:
   clippings: all
   ignore:
     envs: development
+    
+# Collections
+collections:
+  blogpost:
+    output: true
+    permalink: /:collection/:path/
+  pythoncausal:
+    output: true
+    permalink: /:collection/:path/
+  causalgraph:
+    output: true
+    permalink: /:collection/:path/
+  aicausal:
+    output: true
+    permalink: /:collection/:path/
+    
 
 
 # Defaults
@@ -274,8 +292,86 @@ defaults:
       type: posts
     values:
       layout: single
-      author_profile: true
       read_time: true
-      comments: # true
+      comments: true
       share: true
       related: true
+      show_date: true
+      author_profile: true
+      toc: true
+      toc_label: "Mục lục"
+      toc_sticky: true
+  # _pages
+  - scope:
+      path: "_pages"
+      type: pages
+    values:
+      layout: single
+      share: true
+      comments: true
+      author_profile: true
+      #toc: true
+      #toc_label: "Mục lục"
+      #toc_icon: "ML"  
+  # _blogpost
+  - scope:
+      path: ""
+      type: blogpost
+    values:
+      layout: single
+      read_time: true
+      comments: true
+      share: true
+      related: true
+      show_date: true
+      author_profile: true
+      toc: true
+      toc_label: "Mục lục"
+      toc_sticky: true
+      #toc_icon: "ML"
+  # _pythoncausal
+  - scope:
+      path: ""
+      type: pythoncausal
+    values:
+      layout: single
+      read_time: true
+      comments: true
+      share: true
+      related: true
+      show_date: true
+      author_profile: true
+      toc: true
+      toc_label: "Mục lục"
+      toc_sticky: true
+  # _causalgraph
+  - scope:
+      path: ""
+      type: causalgraph
+    values:
+      layout: single
+      read_time: true
+      comments: true
+      share: true
+      related: true
+      show_date: true
+      author_profile: true
+      toc: true
+      toc_label: "Mục lục"
+      toc_sticky: true
+  # _aicausal
+  - scope:
+      path: ""
+      type: aicausal
+    values:
+      layout: single
+      read_time: true
+      comments: true
+      share: true
+      related: true
+      show_date: true
+      author_profile: true
+      toc: true
+      toc_label: "Mục lục"
+      toc_sticky: true     
+ 
