--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -122,6 +122,8 @@ aicausal:
         url: /aicausal/ac14
       - title: "15. Nguyên mẫu - Phần 2"
         url: /aicausal/ac15
+      - title: "16. Bức tranh toàn cảnh"
+        url: /aicausal/ac16
         
         
 # main links
