--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -124,6 +124,8 @@ aicausal:
         url: /aicausal/ac15
       - title: "16. Bức tranh toàn cảnh"
         url: /aicausal/ac16
+      - title: "17. Các công cụ xác định nhân quả"
+        url: /aicausal/ac17
         
         
 # main links
