--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -126,6 +126,8 @@ aicausal:
         url: /aicausal/ac16
       - title: "17. Các công cụ xác định nhân quả"
         url: /aicausal/ac17
+      -  title: "18. Vấn đề đạo đức trong Học máy"
+        url: /aicausal/ac18
         
         
 # main links
