--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -128,6 +128,8 @@ aicausal:
         url: /aicausal/ac17
       - title: "18. Vấn đề đạo đức trong Học máy"
         url: /aicausal/ac18
+      - title: "19. Phương hướng tương lai - Phần 1"
+        url: /aicausal/ac19
         
         
 # main links
