--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -130,6 +130,8 @@ aicausal:
         url: /aicausal/ac18
       - title: "19. Phương hướng tương lai - Phần 1"
         url: /aicausal/ac19
+      - title: "20. Phương hướng tương lai - Phần 2"
+        url: /aicausal/ac20
         
         
 # main links
